<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_dotgraph</name>
  <version>0.0.2</version>
  <description>rqt GUI plugin to visualize dot graphs.</description>
  <maintainer email="alexander.l.xydes.civ@us.navy.mil">Alexander Xydes</maintainer>
  <maintainer email="thomas.a.denewiler.civ@us.navy.mil">Thomas Denewiler</maintainer>
  <maintainer email="greg.t.kogut.civ@us.navy.mil">Greg Kogut</maintainer>
  <license>LGPLv3</license> <!-- For rqt_dotgraph/xdot_qt.py only. -->
  <license>CC0</license> <!-- For all other files. -->

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-pyside2</exec_depend>
  <exec_depend>python3-qt5-bindings</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend version_gte="1.1.2">qt_dotgraph</exec_depend>
  <exec_depend>qt_gui_py_common</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
